--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,15 +67,15 @@
                 >
                     <ul class="nav navbar-nav menu_nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">主页</a>
+                            <a class="nav-link" href="index">主页</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">物理实验报告中心</a>
+                            <a class="nav-link" href="index">物理实验报告中心</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">题库</a>
+                            <a class="nav-link" href="index">题库</a>
                         </li>
                     </ul>
                 </div>
@@ -99,7 +99,7 @@
                             phylab-beta-two
                         </h2>
                         <div>
-                            <a href="login.html" class="primary-btn ml-sm-3 ml-0">登陆</a>
+                            <a href="login" class="primary-btn ml-sm-3 ml-0">登陆</a>
                         </div>
                     </div>
                 </div>
