--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,26 +87,29 @@
 
 <!--================ Start Home Banner Area =================-->
 <section class="home_banner_area">
-    <div class="col-lg-4 of fset-lg-1" style="position:relative;left:500px;top:200px;width:500px;height:50px">
+    <div class="col-lg-4 of fset-lg-1" style="margin: 0 auto; padding-top: 100px;">
         <div class="register_form">
             <h3>登陆</h3>
-            <!-- 修改action ~~~~ -->
+            <div class="alert alert-info" id="login-message-alert" th:if="${message}" style="text-align:initial; margin-top: 20px;">
+                <button type="button" class="close" data-dismiss="alert">x</button>
+                登陆失败, <span th:text="${message}"></span>
+            </div>
             <form
                     class="form_area"
                     id="myForm"
-                    action=""
+                    action="/login"
                     method="post"
             >
                 <div class="row">
                     <div class="col-lg-12 form_group">
                         <input
-                                name="name"
-                                placeholder="用户名"
+                                name="email"
+                                placeholder="邮箱"
                                 required=""
                                 type="text"
                         />
                         <input
-                                name="name"
+                                name="password"
                                 placeholder="密码"
                                 required=""
                                 type="password"
@@ -134,7 +137,6 @@
 <script type="text/javascript" th:src="@{/vendors/owl-carousel/owl.carousel.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/owl-carousel-thumb.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/jquery.ajaxchimp.min.js}"></script>
-<script type="text/javascript" th:src="@{/js/mail-script.js}"></script>
 <!--gmaps Js-->
 <script type="text/javascript" th:src="@{/js/gmaps.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/theme.js}"></script>
