--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,12 +87,12 @@
 
 <!--================ Start Home Banner Area =================-->
 <section class="home_banner_area">
-    <div class="col-lg-4 of fset-lg-1" style="margin: 0 auto; padding-top: 100px;">
+    <div class="col-lg-4 of fset-lg-1" style="margin: auto auto; padding-top: 150px;">
         <div class="register_form">
             <h3>登陆</h3>
             <div class="alert alert-info" id="login-message-alert" th:if="${message}" style="text-align:initial; margin-top: 20px;">
                 <button type="button" class="close" data-dismiss="alert">x</button>
-                登陆失败, <span th:text="${message}"></span>
+                <span th:text="${message}"></span>
             </div>
             <form
                     class="form_area"
@@ -103,8 +103,8 @@
                 <div class="row">
                     <div class="col-lg-12 form_group">
                         <input
-                                name="email"
-                                placeholder="邮箱"
+                                name="username"
+                                placeholder="邮箱或者学号"
                                 required=""
                                 type="text"
                         />
@@ -118,8 +118,8 @@
                     <div class="col-lg-12 text-center">
                         <button type="submit" value="Submit" class="primary-btn" >登陆</button>
                     </div>
-                    <div class="col-lg-12 text-center">
-                        <button class="primary-btn" onclick="location.href='register'">注册</button>
+                    <div class="col-lg-12">
+                        <p>没有账号？<a href='/register'>点此注册</a></p>
                     </div>
                 </div>
             </form>
