登陆页面显示小问题修复

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -137,7 +137,7 @@
                         <button type="submit" value="Submit" class="primary-btn" >注册</button>
                     </div>
                     <div class="col-lg-12 ">
-                        <p>已有账号？<a href='/login'>返回登陆</a></p>
+                        <p style="margin-top: 1rem">已有账号？<a href='/login'>返回登陆</a></p>
                     </div>
                 </div>
             </form>
