--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -76,17 +76,29 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index">题库</a>
                         </li>
-                        <li class="nav-item">
-                            <ul class="nav navbar-nav nav-link">
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span th:text="${user.name}">User's Name</span><i class="fas fa-user pull-right"></i></a>
-                                    <ul class="dropdown-menu">
-                                        <li style="height:20px;"><a href="#">个人中心</a></li>
-                                        <li style="height:20px;"><a href="/logout">取消登录</a></li>
-                                    </ul>
+
+                        <li class="nav-item submenu dropdown">
+                            <a
+                                    href="#"
+                                    class="nav-link dropdown-toggle"
+                                    data-toggle="dropdown"
+                                    role="button"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                            ><span th:text="${user.name}">User's Name</span></a
+                            >
+                            <ul class="dropdown-menu">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">个人中心</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/logout"
+                                    >取消登陆</a
+                                    >
                                 </li>
                             </ul>
                         </li>
+
                     </ul>
                 </div>
             </div>
