--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -119,7 +119,7 @@
                         <button type="submit" value="Submit" class="primary-btn" >登陆</button>
                     </div>
                     <div class="col-lg-12">
-                        <p>没有账号？<a href='/register'>点此注册</a></p>
+                        <p style="margin-top: 1rem">没有账号？<a href='/register'>点此注册</a></p>
                     </div>
                 </div>
             </form>
