--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -81,7 +81,7 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span th:text="${user.name}">User's Name</span><i class="fas fa-user pull-right"></i></a>
                                     <ul class="dropdown-menu">
-                                        <li style="height:20px;"><a href="#">个人中心</a></li>
+                                        <li style="height:20px;"><a href="/user">个人中心</a></li>
                                         <li style="height:20px;"><a href="/logout">取消登录</a></li>
                                     </ul>
                                 </li>
