删去Index界面模板中的多余组件

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 <!--================ Start Header Menu Area =================-->
 <header class="header_area">
     <div class="main_menu">
-        <div class="search_input" id="search_input_box">
+        <!--<div class="search_input" id="search_input_box">
             <div class="container">
                 <form class="d-flex justify-content-between" method="" action="">
                     <input
@@ -41,7 +41,7 @@
                     ></span>
                 </form>
             </div>
-        </div>
+        </div>-->
 
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
