Index界面导航栏动态交互

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,6 +67,13 @@
                         id="navbarSupportedContent"
                 >
                     <ul class="nav navbar-nav menu_nav ml-auto">
+                        <style>
+                            .nav>li:hover{
+                                padding-top: 10px;
+                                color: azure;
+                                background: #f4bb02;
+                            }
+                        </style>
                         <li class="nav-item active">
                             <a class="nav-link" href="index">主页</a>
                         </li>
