--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -4,10 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PhyLabReportCore</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/seven-style.css">
-	<link rel="stylesheet" href="../static/css/mystyle_wjb.css">
-	
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" type="text/css" />
+    <link th:href="@{/css/seven-style.css}" rel="stylesheet" type="text/css" />
+    <link th:href="@{/css/mystyle_wjb.css}" rel="stylesheet" type="text/css" />
+    
 </head>
 <body onload="check()">
 <div class="modal fade" id="lab_table_1011">
