修改用户信息

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -114,7 +114,7 @@
                         />
                         <input
                                 name="name"
-                                placeholder="昵称"
+                                placeholder="用户名"
                                 required
                                 type="text"
                         />
