change home-banner image link for faster loading

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -339,7 +339,7 @@ button:focus {
   z-index: 1;
   min-height: 100vh;
   position: relative;
-  background: url(../img/banner/home-banner.jpg) no-repeat center;
+  background: url(https://ws1.sinaimg.cn/mw690/0070O95Yly1g2284eoigjj318x0u0gw6.jpg) no-repeat center;
   background-size: cover; }
   .home_banner_area .banner_inner {
     position: absolute;
