--- a/src/main/resources/static/scss/_banner.scss
+++ b/src/main/resources/static/scss/_banner.scss
@@ -5,7 +5,7 @@
   z-index: 1;
   min-height: 100vh;
   position: relative;
-  background: url(../img/banner/home-banner.jpg) no-repeat center;
+  background: url(https://ws1.sinaimg.cn/mw690/0070O95Yly1g2284eoigjj318x0u0gw6.jpg) no-repeat center;
   background-size: cover;
   .banner_inner {
     position: absolute;
