--- a/src/main/resources/templates/report-center.html
+++ b/src/main/resources/templates/report-center.html
@@ -6,7 +6,7 @@
     <title>PhyLabReportCore</title>
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/css/seven-style.css}" rel="stylesheet" type="text/css" />
-
+    <link th:href="@{/css/mystyle.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/css/report.css}" rel="stylesheet" type="text/css" />
 
 </head>
@@ -1953,11 +1953,10 @@
                                 <div class="panel-body">
                                     <form class="form-inline container-fluid">
                                         <div class="row">
-                                            <div class="form-group  col-md-7">
-                                                <label for="InputLabIndex" class="sr-only">LabIndex</label>
-                                                <input type="text" class="form-control lab_input" id="InputLabIndex" onkeypress="labIndexInput()" placeholder="请输入实验编号">
-                                            </div>
-                                            <input type="button" class="btn btn-default-outline col-md-4" id="selectBtn" style="margin-left:10px;" onclick="selectBtnClick()"  value="Select"></input>
+                                            <label for="InputLabIndex" class="sr-only">LabIndex</label>
+                                            <input type="text" class="form-control lab_input" id="InputLabIndex" onkeypress="labIndexInput()" placeholder="请输入实验编号">
+
+                                            <input style="margin-left: 10px;" type="button" class="btn btn-default-outline" id="selectBtn" onclick="selectBtnClick()"  value="Select"></input>
                                         </div>
                                     </form>
                                     <div style="display:none" id="back_info" th:each="rept : ${reportTemplates}">
@@ -1966,12 +1965,12 @@
                                     <div class="alert alert-danger" role="alert" style="display:none;height:30px;padding:5px;">
                                         <span class="glyphicon glyphicon-remove-sign"></span><strong>&nbsp Error:</strong><span>&nbsp 请输入正确的实验序号!</span>
                                     </div>
-                                    <div class="table-autoscroll" style="width:100%;height:29%;">
-                                        <table class="table table-condensed table-hover table-striped" style="width:100%;height:92%;">
-                                            <tbody class="table-small no-decoration" th:each="rept : ${reportTemplates}">
-                                                <tr>
-                                                <td><a href="#" class="lab lab_index" th:text="${rept.getExperiment_id()}">Experiment ID</a></td>
-                                                <td><a href="#" class="lab lab_title" th:title="${rept.getExperiment_id()}" th:text="${rept.getExperiment_name()}">Experiment Name</a></td>
+                                    <div class="table-autoscroll" style="width:100%;height:29%;border: 1px #eee solid;">
+                                        <table class="table table-condensed table-hover table-striped" style="width:100%;">
+                                            <tbody class="table-small no-decoration">
+                                                <tr  th:each="rept : ${reportTemplates}">
+                                                    <td><a href="#" class="lab lab_index" th:text="${rept.getExperiment_id()}">Experiment ID</a></td>
+                                                    <td><a href="#" class="lab lab_title" th:title="${rept.getExperiment_id()}" th:text="${rept.getExperiment_name()}">Experiment Name</a></td>
                                                 </tr>
                                             </tbody>
                                         </table>
@@ -2026,7 +2025,7 @@
 </div>
 
 <script th:src="@{/js/jquery-3.2.1.min.js}"></script>
-<script th:src="@{/js/bootstrap.min.js}"></script>
+<script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script th:src="@{/js/global.js}"></script>
 <script th:src="@{/js/reportCore.js}"></script>
 <script th:src="@{/js/pdfobject.js}"></script>
