--- a/src/main/resources/templates/usercenter.html
+++ b/src/main/resources/templates/usercenter.html
@@ -108,7 +108,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text">@</span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Promo code">
+                        <input type="text" class="form-control" th:placeholder="${user.getStudent_id()}">
                     </div>
                 </div>
 
@@ -117,7 +117,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text">姓名</span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Promo code">
+                        <input type="text" class="form-control" th:placeholder="${user.getName()}">
                         <div class="input-group-append">
                             <button type="submit" class="btn btn-secondary">更改姓名</button>
                         </div>
@@ -128,15 +128,17 @@
 
             <div class="row" style="margin-top: 16px;margin-bottom: 16px;">
                 <div class="col-md-8">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">邮箱</span>
+                    <form method="post" action="/usercenter/updateemail">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">邮箱</span>
+                            </div>
+                            <input type="text" name="email" class="form-control" th:placeholder="${user.getEmail()}">
+                            <div class="input-group-append">
+                                <button type="submit" class="btn btn-secondary">更改提醒邮箱</button>
+                            </div>
                         </div>
-                        <input type="text" class="form-control" placeholder="Promo code">
-                        <div class="input-group-append">
-                            <button type="submit" class="btn btn-secondary">更改提醒邮箱</button>
-                        </div>
-                    </div>
+                    </form>
                 </div>
             </div>
 
@@ -144,7 +146,7 @@
                 <div class="col-md-6">
                     <form role="form">
                         <div class="form-group">
-                            <textarea class="form-control" rows="3"></textarea>
+                            <textarea class="form-control" rows="3" th:placeholder="${user.getIntroduction()}"></textarea>
                         </div>
                         <button class="btn btn-secondary" type="submit">一句话介绍自己～～</button>
                     </form>
