完善用户界面

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@
                             >
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/index/user">个人中心</a>
+                                    <a class="nav-link" href="/usercenter">个人中心</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/logout"
