--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -1936,7 +1936,7 @@
 				<li><a href="##">关于</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-                <li><a href="./user.html">{{$username}}的个人中心</a></li>
+                <li><a href="userupdate.html">{{$username}}的个人中心</a></li>
                 <li><a href="./login.html">登出</a></li>
             </ul>
 		</div>
