--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -91,6 +91,10 @@
         <div class="register_form">
             <h3>注册</h3>
             <!-- 修改action -->
+            <div class="alert alert-info" id="login-message-alert" th:if="${message}" style="text-align:initial; margin-top: 20px;">
+                <button type="button" class="close" data-dismiss="alert">x</button>
+                <span th:text="${message}"></span>
+            </div>
             <form
                     class="form_area"
                     id="myForm"
