--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -90,9 +90,9 @@
     <div class="col-lg-4 of fset-lg-1" style="margin: auto auto; padding-top: 150px;">
         <div class="register_form">
             <h3>登陆</h3>
-            <div class="alert alert-info" id="login-message-alert" th:if="${message}" style="text-align:initial; margin-top: 20px;">
-                <button type="button" class="close" data-dismiss="alert">x</button>
-                <span th:text="${message}"></span>
+            <div id="login-message-alert" th:if="${message}" style="text-align:initial; margin-top: 20px;">
+                <button type="button" class="close" data-dismiss="alert" onclick="deleteMessage()" id="demo_1">x</button>
+                <span th:text="${message}" id="demo_2" style="color: red"></span>
             </div>
             <form
                     class="form_area"
@@ -140,5 +140,12 @@
 <!--gmaps Js-->
 <script type="text/javascript" th:src="@{/js/gmaps.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/theme.js}"></script>
+<script>
+    function deleteMessage(){
+        document.getElementById("demo_1").style.display="none";
+        document.getElementById("demo_2").style.display="none";
+        document.getElementById(" login-message-alert").style.display="none";
+    }
+</script>
 </body>
 </html>
