--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -91,9 +91,9 @@
         <div class="register_form">
             <h3>注册</h3>
             <!-- 修改action -->
-            <div class="alert alert-info" id="login-message-alert" th:if="${message}" style="text-align:initial; margin-top: 20px;">
-                <button type="button" class="close" data-dismiss="alert">x</button>
-                <span th:text="${message}"></span>
+            <div id="login-message-alert" th:if="${message}" style="text-align:initial; margin-top: 20px;">
+                <button type="button" class="close" data-dismiss="alert" onclick="deleteMessage()" id="demo_1">x</button>
+                <span th:text="${message}" id="demo_2" style="color: red"></span>
             </div>
             <form
                     class="form_area"
@@ -162,6 +162,14 @@
 <!--gmaps Js-->
 <script type="text/javascript" th:src="@{/js/gmaps.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/theme.js}"></script>
+
+<script>
+    function deleteMessage(){
+        document.getElementById("demo_1").style.display="none";
+        document.getElementById("demo_2").style.display="none";
+        document.getElementById(" login-message-alert").style.display="none";
+    }
+</script>
 <script>
     // 密码确认
     function check(input) {
