--- a/src/main/resources/templates/userupdate.html
+++ b/src/main/resources/templates/userupdate.html
@@ -25,24 +25,7 @@
 <!--================ Start Header Menu Area =================-->
 <header class="header_area">
     <div class="main_menu">
-        <div class="search_input" id="search_input_box">
-            <div class="container">
-                <form class="d-flex justify-content-between" method="" action="">
-                    <input
-                            type="text"
-                            class="form-control"
-                            id="search_input"
-                            placeholder="Search Here"
-                    />
-                    <button type="submit" class="btn"></button>
-                    <span
-                            class="ti-close"
-                            id="close_search"
-                            title="Close Search"
-                    ></span>
-                </form>
-            </div>
-        </div>
+
 
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
@@ -69,15 +52,15 @@
                 >
                     <ul class="nav navbar-nav menu_nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index">主页</a>
+                            <a class="nav-link" href="/">主页</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="index">物理实验报告中心</a>
+                            <a class="nav-link" href="/">物理实验报告中心</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="index">题库</a>
+                            <a class="nav-link" href="/">题库</a>
                         </li>
                     </ul>
                 </div>
