添加头像及报告界面向个人界面跳转

--- a/src/main/resources/templates/report-center.html
+++ b/src/main/resources/templates/report-center.html
@@ -1931,6 +1931,8 @@
                 <li><a th:href="@{/}">主页</a></li>
                 <li><a th:href="@{#}">题库</a></li>
                 <li><a th:href="@{/logout}">登出</a></li>
+                <li style="padding-bottom: 0px"><img th:src="@{${pic_hash}}"/></li>
+                <li><a th:href="@{/usercenter}" th:text="${name}">name</a>&nbsp</li>
             </ul>
         </div>
     </nav>
