--- a/src/main/resources/templates/report-center.html
+++ b/src/main/resources/templates/report-center.html
@@ -1965,7 +1965,7 @@
                                             <input style="margin-left: 10px;" type="button" class="btn btn-default-outline" id="selectBtn" onclick="selectBtnClick()"  value="Select"></input>
                                         </div>
                                     </form>
-                                    <div style="display:none" id="back_info" th:each="rept : ${reportTemplates}">
+                                    <div style="display:none" th:id="${rept.getExperiment_id()}" th:each="rept : ${reportTemplates}">
                                         <a th:index="${rept.getExperiment_id()}" th:prepareLink="${rept.getPrepare_link()}" th:db-id="${rept.getId()}"></a>
                                     </div>
                                     <div class="alert alert-danger" role="alert" style="display:none;height:30px;padding:5px;">
