--- a/src/main/resources/templates/userupdate.html
+++ b/src/main/resources/templates/userupdate.html
@@ -94,14 +94,14 @@
                             <div class="layui-form-item">
                                 <label class="layui-form-label"  >用户名：</label>
                                 <div class="layui-input-block">
-                                    <input type="text" name="name" required  lay-verify="required"
+                                    <input type="text" name="name" required  lay-verify="required" maxlength="30" minlength="1"
                                            placeholder="请输入用户名" autocomplete="off" class="layui-input" th:value="${user.getName()}"/>
                                 </div>
                             </div>
                             <div class="layui-form-item">
                                 <label class="layui-form-label"  >邮箱：</label>
                                 <div class="layui-input-block">
-                                    <input type="email" name="email" required  lay-verify="required"
+                                    <input type="email" name="email" required  lay-verify="required" maxlength="50" pattern="([A-Z]|[a-z]|[0-9]|-|_)+@([a-z]|[0-9]){2,}.((com|cn)|edu.cn)"
                                            placeholder="请输入邮箱" autocomplete="off" class="layui-input" th:value="${user.getEmail()}"/>
                                 </div>
                             </div>
@@ -116,7 +116,7 @@
 
                             <div class="layui-form-item">
                                 <div class="layui-input-block">
-                                    <button class="layui-btn layui-btn-normal" >立即提交</button>
+                                    <button class="layui-btn layui-btn-normal" >提交个人资料修改</button>
                                 </div>
                             </div>
                         </form>
@@ -135,7 +135,7 @@
                                 <label class="layui-form-label">新密码：</label>
                                 <div class="layui-input-block">
                                     <input type="password" name="password2" required lay-verify="required"
-                                           id="password2"
+                                           id="password2" minlength="6" maxlength="20"
                                            placeholder="请输入密码" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
@@ -143,13 +143,13 @@
                                 <label class="layui-form-label">重复密码：</label>
                                 <div class="layui-input-block">
                                     <input type="password" name="password3" required lay-verify="required"
-                                           oninput="check2(this)" id="password3"
+                                           oninput="check2(this)" id="password3" minlength="6" maxlength="20"
                                            placeholder="请输入密码" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                             <div class="layui-form-item">
                                 <div class="layui-input-block">
-                                    <button class="layui-btn layui-btn-normal" >立即提交</button>
+                                    <button class="layui-btn layui-btn-normal" >提交密码修改</button>
                                 </div>
                             </div>
                         </form>
@@ -162,6 +162,8 @@
 <!--================ End Home Banner Area =================-->
 
 <script th:src="@{/admin/layui/layui.js}" type="text/javascript" charset="utf-8"></script>
+<!--jqeury_validate-->
+<script type="text/javascript" th:src="@{/js/jquery.validate.min.js}"></script>
 <script>
     //Demo
     layui.use(['form','element'], function(){
