--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -236,7 +236,7 @@
 					</div>
 				</div><br/>
 				<button type="button" class="btn-Save btn btn-lg btn-danger btn-block" id="btnSave_1011" style="display:block;"><span class="glyphicon glyphicon-cloud-upload"></span>&nbsp 保存！</button>
-				<button type="button" class="btn-Error btn btn-lg btn-danger btn-block" id="btnError_1011" style="display:none;" disabled="disable"><span class="glyphicon glyphicon-warning-sign"></span>&nbsp ：<span id="ErrorText_1011">请选择并完整填写至少一个实验</span></button>
+				<button type="button" class="btn-Error btn btn-lg btn-danger btn-block" id="btnError_1011" style="display:none;"  ><span class="glyphicon glyphicon-warning-sign"></span>&nbsp ：<span id="ErrorText_1011">请选择并完整填写至少一个实验</span></button>
 			</div>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal-dialog -->
@@ -1918,7 +1918,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<img th:src="@{img/phylab_logo.svg}" th:href="@{/index.html}" style="float:left;margin:0 0 0 20px;height:50px;"></img>
+			<img th:src="@{img/phylab_logo.svg}" th:href="@{/index.html}" style="float:left;margin:0 0 0 20px;height:50px;"/>
 			<a class="navbar-brand" th:href="@{/index.html}" style="margin:0 40px 0 0px;">PhyLab</a>
 		</div>
 		<div class="collapse navbar-collapse navbar-responsive-collapse" style="font-size: 20px;font-weight: bold;">
