--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
     <link href="https://cdn.bootcss.com/font-awesome/5.8.1/css/all.min.css" rel="stylesheet">
     <!-- main css -->
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/phyweb.css}">
 </head>
 
 <body>
@@ -40,7 +41,6 @@
                     <span class="icon-bar"></span> <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- Collect the nav links, forms, and other content for toggling -->
                 <div
                         class="collapse navbar-collapse offset"
                         id="navbarSupportedContent"
@@ -71,8 +71,9 @@
                                     role="button"
                                     aria-haspopup="true"
                                     aria-expanded="false"
-                            ><span shiro:principal property="name"></span></a
                             >
+                            <div class="gravatar"><shiro:principal property="email" /></div>
+                        </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
                                     <a class="nav-link" href="/usercenter">个人中心</a>
@@ -119,5 +120,8 @@
     </div>
 </section>
 
+<script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.min.js"></script>
+<script th:src="@{/js/global.js}"></script>
 </body>
 </html>
