--- a/src/main/resources/templates/report-center.html
+++ b/src/main/resources/templates/report-center.html
@@ -1046,38 +1046,38 @@
                         <tbody>
                         <tr>
                             <td>1</td>
-                            <td><input class="para 1071_1 form-control" aria-label="入射角α1值1" type="text" id="a11" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="反射角α2值1" type="text" id="a21" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="入射角β1值1" type="text" id="b11" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="反射角β2值1" type="text" id="b21" ></td>
+                            <td><input class="para 1071_1 form-control" aria-label="入射角α1值1" id="a11" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="反射角α2值1" id="a21" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="入射角β1值1" id="b11" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="反射角β2值1" id="b21" type="text"></td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td><input class="para 1071_1 form-control" aria-label="入射角α1值2" type="text" id="a12" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="反射角α2值2" type="text" id="a22" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="入射角β1值2" type="text" id="b12" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="反射角β2值2" type="text" id="b22" ></td>
+                            <td><input class="para 1071_1 form-control" aria-label="入射角α1值2" id="a12" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="反射角α2值2" id="a22" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="入射角β1值2" id="b12" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="反射角β2值2" id="b22" type="text"></td>
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td><input class="para 1071_1 form-control" aria-label="入射角α1值3" type="text" id="a13" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="反射角α2值3" type="text" id="a23" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="入射角β1值3" type="text" id="b13" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="反射角β2值3" type="text" id="b23" ></td>
+                            <td><input class="para 1071_1 form-control" aria-label="入射角α1值3" id="a13" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="反射角α2值3" id="a23" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="入射角β1值3" id="b13" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="反射角β2值3" id="b23" type="text"></td>
                         </tr>
                         <tr>
                             <td>4</td>
-                            <td><input class="para 1071_1 form-control" aria-label="入射角α1值4" type="text" id="a14" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="反射角α2值4" type="text" id="a24" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="入射角β1值4" type="text" id="b14" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="反射角β2值4" type="text" id="b24" ></td>
+                            <td><input class="para 1071_1 form-control" aria-label="入射角α1值4" id="a14" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="反射角α2值4" id="a24" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="入射角β1值4" id="b14" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="反射角β2值4" id="b24" type="text"></td>
                         </tr>
                         <tr>
                             <td>5</td>
-                            <td><input class="para 1071_1 form-control" aria-label="入射角α1值5" type="text" id="a15" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="反射角α2值5" type="text" id="a25" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="入射角β1值5" type="text" id="b15" ></td>
-                            <td><input class="para 1071_1 form-control" aria-label="反射角β2值5" type="text" id="b25" ></td>
+                            <td><input class="para 1071_1 form-control" aria-label="入射角α1值5" id="a15" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="反射角α2值5" id="a25" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="入射角β1值5" id="b15" type="text"></td>
+                            <td><input class="para 1071_1 form-control" aria-label="反射角β2值5" id="b25" type="text"></td>
                         </tr>
                         </tbody>
                     </table>
